fix: sorting element view on small width

--- a/src/components/Catalog/Sorting/Sorting.module.css
+++ b/src/components/Catalog/Sorting/Sorting.module.css
@@ -3,9 +3,7 @@
   padding-left: 0.5rem;
   font-weight: 500;
 }
-.sort-segments {
-  margin-left: 1rem;
-}
+
 .order-checked {
   color: #031cf7;
 }
